ansible/roles/kube_dispatcher_dashboard_export_by_source/kubernets/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dispatcher-dashboard-ingress
spec:
  rules:
  - host: dashboard.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dispatcher-dashboard-service
            port:
              number: 80
